<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_private_statistic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.rm4it.PrivateStatisticActivity">


   <TextView
       android:id="@+id/tvTitleAllStat"
       android:layout_width="match_parent"
       android:text="รายงานผลการประเมินโดยภาพรวม"
       android:textAlignment="center"
       android:textSize="20sp"
       android:layout_marginBottom="10dp"
       android:textStyle="bold"
       android:textColor="#0b63bb"
       android:layout_height="wrap_content" />

  <TableLayout
      android:layout_below="@id/tvTitleAllStat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <TableRow
          android:background="#d0ced0"
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:paddingBottom="8dp"
              android:layout_height="wrap_content"
              android:text="@string/risk1group"
              android:textSize="17sp"
              android:textColor="#0b553f"

              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt1"
              android:textSize="20sp"
              android:textColor="#8d9593"

              />
      </TableRow>
      <TableRow
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:paddingBottom="8dp"
              android:layout_height="wrap_content"
              android:text="@string/risk2group"
              android:textSize="15sp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt2"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:background="#d0ced0"
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/risk3group"
              android:textSize="15sp"
              android:paddingBottom="8dp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt3"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:text="@string/risk4group"
              android:textSize="15sp"
              android:paddingBottom="8dp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt4"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:background="#d0ced0"
          android:paddingBottom="8dp"
          >
          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:paddingBottom="8dp"
              android:text="@string/risk5group"
              android:textSize="15sp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt5"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/risk6group"
              android:textSize="15sp"
              android:paddingBottom="8dp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt6"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:background="#d0ced0"
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/risk7group"
              android:textSize="15sp"
              android:paddingBottom="8dp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt7"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/risk8group"
              android:textSize="15sp"
              android:textColor="#0b553f"
              android:paddingBottom="8dp"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt8"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
      <TableRow
          android:background="#d0ced0"
          android:paddingBottom="5dp"
          >
          <TextView
              android:layout_width="200dp"
              android:layout_height="wrap_content"
              android:text="@string/risk9group"
              android:paddingBottom="8dp"
              android:textSize="15sp"
              android:textColor="#0b553f"
              />
          <TextView
              android:layout_width="140dp"
              android:layout_height="wrap_content"
              android:id="@+id/txt9"
              android:textSize="20sp"
              android:textColor="#8d9593"
              />
      </TableRow>
  </TableLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="BACK"
        android:id="@+id/btnBack"
        />
</RelativeLayout>
