<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="appewtc.masterung.rm4it.ChooseRisk">


    <LinearLayout
        android:id="@+id/linearButton"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ดูสถิติภาพรวม"
            android:id="@+id/btnAllStatistic"
            android:onClick="onButtonClick"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:id="@+id/btnHome"
            android:onClick="onButtonClick"
             />
    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="รายงายผลการประเมิน"
        android:id="@+id/textView27"
        android:layout_centerHorizontal="true"
        android:textSize="30sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView27"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:id="@+id/ll"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ชื่อ"
            android:textSize="15sp"
            android:layout_marginRight="5dp"
            />
        <TextView
            android:id="@+id/tvName"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Master"
            />
        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="นามสกุล"-->
            <!--android:textSize="15sp"-->
            <!--android:layout_marginLeft="5dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--/>-->
        <!--<TextView-->
            <!--android:id="@+id/tvLastName"-->
            <!--android:textSize="10sp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="LastName"-->
            <!--/>-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="จังหวัด"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            />

        <TextView
            android:id="@+id/tvProvince"
            android:textSize="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ProvinceName"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView"
        android:layout_below="@id/ll"
        android:layout_above="@id/linearButton" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk1group"
                    android:id="@+id/btnGroup1"
                    android:onClick="onButtonClick"
                    android:layout_weight="1"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk2group"
                    android:onClick="onButtonClick"
                    android:id="@+id/btnGroup2"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk3group"
                    android:id="@+id/btnGroup3"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk4group"
                    android:id="@+id/btnGroup4"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk5group"
                    android:id="@+id/btnGroup5"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk6group"
                    android:id="@+id/btnGroup6"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk7group"
                    android:id="@+id/btnGroup7"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk8group"
                    android:id="@+id/btnGroup8"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >



                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/risk9group"
                    android:id="@+id/btnGroup9"
                    android:onClick="onButtonClick"
                    android:layout_marginLeft="1dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
