<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity"
    android:background="@drawable/bg0">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#82ffffff"
        android:padding="15dp"
        android:layout_above="@+id/re1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_signup"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/text" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:paddingBottom="7dp"
                android:id="@+id/textView3"
                android:textSize="17sp"
                android:layout_weight="1"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText3"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/idcard"
                android:id="@+id/textView4"
                android:textSize="17sp"
                android:paddingBottom="7dp"
                android:layout_weight="1"

                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText4"
                android:layout_weight="1"
                android:inputType="number"
                android:maxLength="13"
                android:hint="13 หลัก" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/province"
                android:paddingBottom="7dp"
                android:id="@+id/textView5"
                android:textSize="17sp"
                android:layout_weight="1"
                android:textColor="@color/text" />
            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/position"
                android:paddingBottom="7dp"
                android:id="@+id/textView6"
                android:textSize="17sp"
                android:layout_weight="1"
                android:textColor="@color/text" />



            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText6"
                android:layout_weight="2" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/workyear"
                android:paddingBottom="7dp"
                android:id="@+id/textView7"
                android:textSize="17sp"
                android:layout_weight="1"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText7"
                android:layout_weight="2"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:id="@+id/textView8"
                android:textSize="17sp"
                android:layout_weight="1"
                android:paddingBottom="7dp"
                android:textColor="@color/text" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText8"
                android:layout_weight="1" />
        </LinearLayout>

    </LinearLayout>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:id="@+id/re1"
    android:layout_centerInParent="true"
    android:layout_height="wrap_content">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="บันทึกข้อมูล"
        android:id="@+id/button4"
        android:onClick="clickSaveData"
   />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ยกเลิก"
        android:id="@+id/btnCancel"
        android:layout_toRightOf="@id/button4"
        android:onClick="clickCancel"
 />
</RelativeLayout>
    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="บันทึกข้อมูล"-->
        <!--android:id="@+id/button4"-->
        <!--android:gravity="center"-->
        <!--android:onClick="clickSaveData"-->
        <!--android:layout_alignParentBottom="true" />-->

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="ยกเลิก"-->
        <!--android:id="@+id/btnCancel"-->
        <!--android:layout_toRightOf="@id/button4"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:onClick="clickCancel"-->
        <!--android:layout_alignParentBottom="true" />-->

</RelativeLayout>